Tooltip will flip its axes if it is too close to the bottom or right of the screen to display correctly

--- a/content/dota_addons/legion_defence/panorama/styles/custom_game/tooltip.css
+++ b/content/dota_addons/legion_defence/panorama/styles/custom_game/tooltip.css
@@ -18,6 +18,16 @@
 	max-width: 300px;
 }
 
+.Right
+{
+	horizontal-align: right;
+}
+
+.Bottom
+{
+	vertical-align: bottom;
+}
+
 .TooltipTitle
 {
 	text-transform: uppercase;
